[gd_scene load_steps=3 format=3 uid="uid://b8k5x3m2n4qaq"]

[ext_resource type="Script" path="res://scripts/ui/skill_ui.gd" id="1_skill_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cooldown"]
bg_color = Color(0, 0, 0, 0.6)

[node name="SkillUI" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_skill_ui")

[node name="IconTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="CooldownOverlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
color = Color(0, 0, 0, 0.6)
visible = false

[node name="CooldownLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "0.0"
horizontal_alignment = 1
vertical_alignment = 1
visible = false
